added some layout

--- a/Konzepte der Programmierung/Zusammenfassung/Zusammenfassung.tex
+++ b/Konzepte der Programmierung/Zusammenfassung/Zusammenfassung.tex
@@ -1,9 +1,24 @@
-\documentclass{article}
+\documentclass{book}
 \usepackage[utf8]{inputenc}
 \usepackage{xcolor}
 \usepackage{tcolorbox}
+\usepackage{blindtext}
 
 \begin{document}
+
+\tableofcontents % Inhaltsverzeichnis
+\newpage
+
+\chapter{Einleitung}
+\blindtext
+test
+
+\chapter{Hauptteil}
+\blindtext
+test
+
+\chapter{Fazit}
+\blindtext
 
 \begin{tcolorbox}[colback=blue!5!white, colframe=blue!75!black, title=Beispiel-Titel, width=\textwidth]
 Dies ist eine farbige Textbox mit einem Titel, einem blauen Hintergrund und einem Rahmen.
