Assignment 1 Task 1 complete

--- a/Semester_2/Datenbankensysteme/Assignment 1/Assignment 1.tex
+++ b/Semester_2/Datenbankensysteme/Assignment 1/Assignment 1.tex
@@ -13,24 +13,43 @@
 \maketitle  % Erstellt die Titelseite
 
 
+%%% TASK 1 %%%
 
 \section*{Task 1: Terms and Definitions}
 \begin{enumerate}
-	\item Was ist eine Datenbank?
+	\item \textbf{What is a database(DB)?}
 	
 	\begin{itemize}
-		\item Test
+		\item A Database is a collection of related data, which is organized according to a specific schema
 	\end{itemize}
 	
-	\item What is a database management system?
+	\item \textbf{What is a database management system?(DBMS)}
+	\begin{itemize}
+		\item A DBMS is a collection of software programs for defining, constructing, and manipulating a database
+	\end{itemize}
 	
-	\item What is a database system?
+	\item \textbf{What is a database system?}
+	\begin{itemize}
+		\item A DBS is the combination of a Database and a Databse Management System
+	\end{itemize}
 	
-	\item What is a data model?
+	\item \textbf{What is a data model?}
+	\begin{itemize}
+		\item A Data model is defined by three points:
+		\begin{itemize}
+			\item Data Structures: how data is organized (in tables, graphs and trees)
+			\item Operations: What manipulations is allowed within the database (queries, insertions, updates)
+			\item Constraints: specific rules for a Database, which ensure integrity and correctness.
+		\end{itemize}
+	\end{itemize}
 	
-	\item What are metadata and what are they used for?
+	\item \textbf{What are metadata and what are they used for?}
+	\begin{itemize}
+		\item Metadata is the description of data structures, schemas and constraints
+	\end{itemize}
 \end{enumerate}
 
+%%% TASK 2 %%%
 
 \section*{Task 2: Data Independence}
 \begin{enumerate}
@@ -39,13 +58,16 @@
 \item What is logical data independence?
 \end{enumerate}
 
-\section*{Tast 3: Taxonomy of Database Systems}
+%%% TASK 3 %%%
+
+\section*{Task 3: Taxonomy of Database Systems}
 \begin{enumerate}
 \item Research the types of database systems that exist and how they can be grouped.
 \end{enumerate}
 
 
 %%% TAST 4 %%%
+
 \section*{Task 4: Entity Relationship Model - Basics}
 \begin{enumerate}
 \item What are the basic building blocks of the ER model?
@@ -57,6 +79,7 @@
 
 
 %%% TASK 5 %%%
+
 \section*{Task 5: Entity Relationship Model I}
 Model the facts below as an Entity Relationship Model using the notation taught in the lecture (Chen notation):
 
@@ -70,6 +93,7 @@ Model the facts below as an Entity Relationship Model using the notation taught 
 
 
 %%% TASK 6 %%%
+
 \section*{Task 6: Entity Relationship Model II}
 \begin{enumerate}
 \item A publisher has a unique name
@@ -87,6 +111,7 @@ reviewer for review.
 
 
 %%% TASK 7 %%%
+
 \section*{Task 7: Entity Relationship Model III}
 \begin{enumerate}
 \item An author has a name, an institution and an email address.
