--- a/Semester_2/Datenbankensysteme/Assignment 1/Assignment 1.tex
+++ b/Semester_2/Datenbankensysteme/Assignment 1/Assignment 1.tex
@@ -53,9 +53,15 @@
 
 \section*{Task 2: Data Independence}
 \begin{enumerate}
-\item What is physical data independence?
+\item \textbf{What is physical data independence?}
+\begin{itemize}
+	\item Changes in the physical schema (e.g., indexing methods, storage devices) do not affect the logical structure or applications
+\end{itemize}
 
-\item What is logical data independence?
+\item \textbf{What is logical data independence?}
+\begin{itemize}
+	\item Changes to the logical schema (e.g., table structure) have minimal or no impact on existing applications
+\end{itemize}
 \end{enumerate}
 
 %%% TASK 3 %%%
