Aufagbenzettel vollständig abgeschrieben

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/Assignment 2.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/Assignment 2.tex
@@ -21,10 +21,38 @@ Ein binärer Baum heißt vollständig, falls jeder Knoten entweder null oder zwe
 
 
 \pbitem{Binäre Suchbäume}
+\begin{enumerate}
+\item Angenommen, wir haben einen binären Suchbaum T , welcher die Zahlen von
+1 bis 1000 als Schlüssel speichert. Wir suchen in T nach dem Schlüssel 363.
+Bestimmen Sie für jede der folgenden Schlüsselfolgen, ob sie als Folge der
+Einträge auf dem Suchpfad nach 363 auftreten kann. Begründen Sie jeweils
+Ihre Antwort.
+\begin{enumerate}
+\item 2, 252, 401, 398, 330, 344, 397, 363.
+\item 924, 220, 911, 244, 898, 258, 362, 363.
+\item 925, 202, 911, 240, 912, 245, 363.
+\item 2, 399, 387, 219, 266, 382, 381, 278, 363.
+\item 935, 278, 347, 621, 299, 392, 358, 363.
+\end{enumerate}
+
+\item Sei T ein binärer Baum mit n Knoten, und sei K eine total geordnete Menge
+von n Schlüsseln. Zeigen Sie, dass es genau eine Möglichkeit gibt, die Schlüssel
+aus K auf die Knoten von T zu verteilen, so dass die binäre Suchbaumeigen-
+schaft erfüllt ist.
+\end{enumerate}
 
 
 \pbitem{AVL-Bäume}
+\begin{enumerate}
+\item Fügen Sie die Schlüssel A, L, G, O, D, T, S, X, Y, Z in dieser Reihenfolge in
+einen anfangs leeren AVL-Baum ein. Löschen Sie sodann die Schlüssel Z, A,
+L. Zeichnen Sie den Baum nach jedem Einfüge- und Löschvorgang, und zeigen
+Sie die Rotationen, welche durchgeführt werden. Annotieren Sie dabei auch
+die Knoten mit ihrer jeweiligen Höhe.
 
+\item Beweisen Sie: Beim Einfügen in einen AVL-Baum wird höchstens eine (Einfach-
+oder Doppel-)Rotation ausgeführt. Gilt das auch beim Löschen (Begründung)?
+\end{enumerate}
 
 
 	
