--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/config.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/config.tex
@@ -1,11 +1,11 @@
 \coursetitle{Algorithmen und Datenstrukturen}
 \courselabel{AuD}
-\exercisesheet{Assignment 1}{Algorithmen und Datenstrukturen}
+\exercisesheet{Assignment 2}{Algorithmen und Datenstrukturen}
 \student{Moritz Ruge \& Lennard}
 \school{Bachelor Informatik}
 \university{Freie Universitäten Berlin}
 \semester{Sommer Semester 2025}
-\date{20 April 2025}
+\date{09 Mai 2025}
 %\usepackage[pdftex]{graphicx}
 %\usepackage{subfigure} 
 \usepackage[backend=biber,style=numeric,url=true]{biblatex} % für Quellenangaben und Bibliotheken
