--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/config.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/config.tex
@@ -18,6 +18,19 @@
 \usepackage{tikz}
 \usetikzlibrary{trees}
 
+% https://chatgpt.com/c/68191c8e-8760-8002-843b-e82091955567
+\usepackage{booktabs} % für schönere Tabellenlinien
+\usepackage{amsmath}  % für mathematische Symbole wie \left[ \right]
+
+%%%% Packet um die Farbe von text zu ändern %%%%
+%\textcolor{red}{text}
+%\definecolor{mygreen}{RGB}{0,150,0}
+%\textcolor{mygreen}{Dies ist grüner Text mit eigener Farbe.}
+%{\color{blue}
+%Dies ist ein ganzer Absatz in Blau.
+%}
+\usepackage{xcolor}
+
 
 \hypersetup{
     colorlinks=true,
