changed the text margin on the left and right

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/Assignment 2.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/Assignment 2.tex
@@ -1,8 +1,9 @@
-\documentclass[a4paper]{assignment}
-
-
+\documentclass[a4paper, margin=1cm]{assignment}
 
 \input{config.tex}
+
+
+
 
 \begin{document}
 
@@ -54,7 +55,7 @@ Ihre Antwort.
 
 \begin{center}
 \small
-\hspace*{-4cm}
+\hspace*{-3cm}
 \begin{tabular}{@{} c c l c c @{}}
 \toprule
 \textbf{Schritt} & \textbf{Aktueller Knoten} & \textbf{Vergleich mit Ziel 363} & \textbf{Nächster Schritt} & \textbf{Intervall für nächsten Knoten} \\
@@ -96,7 +97,7 @@ Ihre Antwort.
 
 \begin{center}
 \small
-\hspace*{-4cm}
+\hspace*{-3cm}
 \begin{tabular}{@{} c c l c c @{}}
 \toprule
 \textbf{Schritt} & \textbf{Aktueller Knoten} & \textbf{Vergleich mit Ziel 363} & \textbf{Nächster Schritt} & \textbf{Intervall für nächsten Knoten} \\
@@ -133,7 +134,7 @@ Ihre Antwort.
 
 \begin{center}
 \small
-\hspace*{-4cm}
+\hspace*{-3cm}
 \begin{tabular}{@{} c c l c c @{}}
 \toprule
 \textbf{Schritt} & \textbf{Aktueller Knoten} & \textbf{Vergleich mit Ziel 363} & \textbf{Nächster Schritt} & \textbf{Intervall für nächsten Knoten} \\
