--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/config.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/config.tex
@@ -1,3 +1,5 @@
+\usepackage[left=3cm, right=2.5cm]{geometry} % Hier die Ränder definieren
+
 \coursetitle{Algorithmen und Datenstrukturen}
 \courselabel{AuD}
 \exercisesheet{Assignment 2}{Algorithmen und Datenstrukturen}
@@ -11,7 +13,6 @@
 \usepackage[backend=biber,style=numeric,url=true]{biblatex} % für Quellenangaben und Bibliotheken
 \usepackage[]{hyperref} % für hyperlinks
 \usepackage{array} % für die Tabelle
-\usepackage{xcolor} %für Farben bei Text
 \addbibresource{ref.bib}  % Add your .bib file here
 
 % Paket für die Baumdiagramdarstellung
