--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/Assignment 2.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/Assignment 2.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, margin=1cm]{assignment}
+\documentclass[a4paper]{assignment}
 
 \input{config.tex}
 
@@ -10,7 +10,7 @@
 % Aufgabe 1 Binäre Suchbäume)
 \begin{problemlist}
 
-\pbitem{Induktion und binäre Bäume}
+\pbitem{Induktion und binäre Bäume} \\
 Ein binärer Baum heißt vollständig, falls jeder Knoten entweder null oder zwei Kinder besitzt.
 \begin{enumerate}
 \item Zeichnen Sie einen binären Suchbaum, der vollständig ist, und einen binären Suchbaum, der nicht vollständig ist.
@@ -140,14 +140,101 @@ Ihre Antwort.
 \textbf{Schritt} & \textbf{Aktueller Knoten} & \textbf{Vergleich mit Ziel 363} & \textbf{Nächster Schritt} & \textbf{Intervall für nächsten Knoten} \\
 \midrule
 1 & 925 & \( 363 < 925 \Rightarrow \) links & 202 & \([1, 924]\) \\
+2 & 202 & \( 363 > 202 \Rightarrow \) rechts & 911 & \([203, 924]\) \\
+3 & 911 & \( 363 < 911 \Rightarrow \) links & 240 & \([203, 910]\) \\
+4 & 240 & \( 363 > 240 \Rightarrow \) rechts & 912 & \([241, 910]\) \\
+5 & 912 & \( 363 < 912 \Rightarrow \) links & & \textcolor{red}{\( 912 > [910] \Rightarrow \) Fehler} \\
+\bottomrule
+\end{tabular}
+\end{center}
+
+\begin{itemize}
+	\item Der Knoten 912 liegt nicht mehr im Intervall von [241,910] und somit ist der Knoten nicht in der \textbf{Schlüsselfolge}.
+\end{itemize}
+\end{answer}
+
+\item \textbf{2, 399, 387, 219, 266, 382, 381, 278, 363.}
+
+\begin{answer}
+\begin{tikzpicture}[scale=0.5]
+\node{2}
+	child{node{...}}
+	child{node{399}
+		child{node{387}
+			child{node{219}
+				child{node{...}}
+				child{node{266}
+					child{node{...}}
+					child{node{382}
+						child{node{381}
+							child{node{278}
+								child{node{...}}
+								child{node{363}}}
+							child{node{...}}}
+						child{node{...}}}}}
+			child{node{...}}}
+		child{node{...}}};
+\end{tikzpicture}
+
+\begin{center}
+\small
+\hspace*{-3cm}
+\begin{tabular}{@{} c c l c c @{}}
+\toprule
+\textbf{Schritt} & \textbf{Aktueller Knoten} & \textbf{Vergleich mit Ziel 363} & \textbf{Nächster Schritt} & \textbf{Intervall für nächsten Knoten} \\
+\midrule
+1 & 2 & \( 363 > 2 \Rightarrow \) rechts & 399 & \([3, 1000]\) \\
+2 & 399 & \( 363 < 399 \Rightarrow \) links & 387 & \([3, 398]\) \\
+3 & 387 & \( 363 < 387 \Rightarrow \) links & 219 & \([3, 386]\) \\
+4 & 219 & \( 363 > 219 \Rightarrow \) rechts & 266 & \([220, 386]\) \\
+5 & 266 & \( 363 > 266 \Rightarrow \) rechts & 382 & \([267, 386]\) \\
+6 & 382 & \( 363 < 382 \Rightarrow \) links & 381 & \([267, 381]\) \\
+7 & 381 & \( 363 < 381 \Rightarrow \) links & 278 & \([267, 380]\) \\
+8 & 278 & \( 363 > 278 \Rightarrow \) rechts & 363 & \([279, 380]\) \\
+9 & 363 & Ziel Erreicht! & - & - \\
 \bottomrule
 \end{tabular}
 \end{center}
 
 \end{answer}
 
-\item 2, 399, 387, 219, 266, 382, 381, 278, 363.
-\item 935, 278, 347, 621, 299, 392, 358, 363.
+\item \textbf{935, 278, 347, 621, 299, 392, 358, 363.}
+
+\begin{answer}
+\begin{tikzpicture}[scale=0.5]
+\node{935}
+	child{node{278}
+		child{node{...}}
+		child{node{347}
+			child{node{\textcolor{red}{299}}}
+			child{node{621}
+				child{node{\textcolor{red}{299}}}
+				child{node{...}}}}}
+	child{node{...}};
+\end{tikzpicture}
+
+\begin{center}
+\small
+\hspace*{-3cm}
+\begin{tabular}{@{} c c l c c @{}}
+\toprule
+\textbf{Schritt} & \textbf{Aktueller Knoten} & \textbf{Vergleich mit Ziel 363} & \textbf{Nächster Schritt} & \textbf{Intervall für nächsten Knoten} \\
+\midrule
+1 & 935 & \( 363 < 935 \Rightarrow \) links & 278 & \([1, 934]\) \\
+2 & 278 & \( 363 > 278 \Rightarrow \) rechts & 347 & \([279, 934]\) \\
+3 & 347 & \( 363 > 347 \Rightarrow \) rechts & 621 & \([348, 934]\) \\
+4 & 621 & \( 363 < 621 \Rightarrow \) links & 299 & \([348, 620]\) \\
+5 & 299 & \( 363 > 299 \Rightarrow \) rechts & & \textcolor{red}{\( 299 < [348] \Rightarrow \) Fehler} \\
+\bottomrule
+\end{tabular}
+\end{center}
+
+\begin{itemize}
+	\item Der Knoten 299 liegt nicht mehr im Intervall von [348,620] und somit ist der Knoten nicht in der \textbf{Schlüsselfolge}.
+\end{itemize}
+
+\end{answer}
+
 \end{enumerate}
 
 \item Sei T ein binärer Baum mit n Knoten, und sei K eine total geordnete Menge
