--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/config.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/config.tex
@@ -22,6 +22,7 @@
 % https://chatgpt.com/c/68191c8e-8760-8002-843b-e82091955567
 \usepackage{booktabs} % für schönere Tabellenlinien
 \usepackage{amsmath}  % für mathematische Symbole wie \left[ \right]
+\usepackage{amssymb}
 
 %%%% Packet um die Farbe von text zu ändern %%%%
 %\textcolor{red}{text}
