Deleted task3(which was assigned to Assignmnet 3), did some formatting on the hole document.

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/Aufgabe_1.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 2/Latex/Aufgabe_1.tex
@@ -1,11 +1,7 @@
-% Aufgabe 1 Binäre Suchbäume)
-\begin{problemlist}
-
-\pbitem{Induktion und binäre Bäume} \\
+\section*{{Problem 1: Induktion und binäre Bäume}}
 Ein binärer Baum heißt vollständig, falls jeder Knoten entweder null oder zwei Kinder besitzt.
-\begin{enumerate}
 
-\item Zeichnen Sie einen binären Suchbaum, der vollständig ist, und einen binären Suchbaum, der nicht vollständig ist.
+\subsection*{a) Zeichnen Sie einen binären Suchbaum, der vollständig ist, und einen binären Suchbaum, der nicht vollständig ist.} 
 
 \begin{answer}
 \begin{itemize}
@@ -43,7 +39,7 @@ Ein binärer Baum heißt vollständig, falls jeder Knoten entweder null oder zwe
 
 \end{answer}
 
-\item Beweisen Sie durch eine geeignete Induktion: In jedem vollständigen binären Suchbaum ist die Anzahl der Blätter genau um eins größer als die Anzahl der inneren Knoten.
+\subsection*{b) Beweisen Sie durch eine geeignete Induktion: In jedem vollständigen binären Suchbaum ist die Anzahl der Blätter genau um eins größer als die Anzahl der inneren Knoten.} 
 
 \begin{answer}
 \begin{itemize}
@@ -85,8 +81,8 @@ Wenn es einen inneren Knoten zusätzlich geben soll, wird ein Blattknoten zu die
 
 \end{answer}
 
-
-\item Formulieren Sie eine ähnliche Aussage für allgemeine binäre Suchbäume und beweisen Sie sie.
+\small
+\subsection*{c) Formulieren Sie eine ähnliche Aussage für allgemeine binäre Suchbäume und beweisen Sie sie.} 
 
 \textbf{Annahme/Eigenschaft:} In einem Baum gilt:$num_{node} = num_{edges} + 1$ $\Rightarrow$ die Anzahl der Knoten i m Baum ergibt sich aus Anzahl der Kanten + 1.
 \begin{itemize}
@@ -121,4 +117,3 @@ $\Box$
 \end{flushright}
 
 
-\end{enumerate}
